     We also copy the instances over without using any events now, so that
     the 'dirty' list on the new session remains unaffected.

   - fixed bug which could arise when using session.begin_nested() in conjunction
     with more than one level deep of enclosing session.begin() statements
     
- dialects

   - MSSQL/PyODBC no longer has a global "set nocount on".

0.4.1
-----

- sql

  - the "shortname" keyword parameter on bindparam() has been 
    deprecated.
  
  - Added contains operator (generates a "LIKE %<other>%" clause).

  - anonymous column expressions are automatically labeled.  
    e.g. select([x* 5]) produces "SELECT x * 5 AS anon_1".
    This allows the labelname to be present in the cursor.description
    which can then be appropriately matched to result-column processing
    rules. (we can't reliably use positional tracking for result-column 
    matches since text() expressions may represent multiple columns).
  
  - operator overloading is now controlled by TypeEngine objects - the 
    one built-in operator overload so far is String types overloading
    '+' to be the string concatenation operator.
    User-defined types can also define their own operator overloading
    by overriding the adapt_operator(self, op) method.
    
  - untyped bind parameters on the right side of a binary expression
    will be assigned the type of the left side of the operation, to better
    enable the appropriate bind parameter processing to take effect
    [ticket:819]
    
  - Removed regular expression step from most statement compilations.
    Also fixes [ticket:833]

  - Fixed empty (zero column) sqlite inserts, allowing inserts on
    autoincrementing single column tables.

  - Fixed expression translation of text() clauses; this repairs various
    ORM scenarios where literal text is used for SQL expressions

  - Removed ClauseParameters object; compiled.params returns a regular
    dictionary now, as well as result.last_inserted_params() /